fixed flexbox alignment, reduced impact of reload after logging in and out

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,24 +5,28 @@ body {
 .nav a {
   margin-right: 1em;
 }
-.attractions {
+/*.attractions {
   width: 68%;
   float: left;
 }
 
 .restaurants {
   width: 30%;
-}
+}*/
 
 #brand {
-  margin-right: 3em;
+  margin-right: 1em;
   font-size: 1.5em;
 }
 .right-nav {
-  float: right;
+  text-align: right;
 }
 .checkbox {
   float: right;
+}
+.welcome-text {
+  font-size: .8em;
+  color: #FFE57F;
 }
 
 a {
@@ -111,6 +115,10 @@ ng-view {
   margin-right: 2em;
   margin-top: 2em;
 }
+
+.attractions .places-thumbs {
+  margin-right: 3em;
+}
 .places-thumbs img {
   float: left;
   margin-right: 1em;
@@ -133,6 +141,10 @@ ng-view {
 
 .topnav {
   box-shadow: 0px 0px 20px #000;
+}
+.md-toolbar-tools {
+  margin-right: 2em;
+
 }
 /* MAP */
 
